--- a/app/src/main/res/layout/activity_view_big_image.xml
+++ b/app/src/main/res/layout/activity_view_big_image.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     android:background="#000000">
 
-    <com.example.administrator.test.activity.HackyViewPager
+    <androidx.viewpager.widget.ViewPager
         android:transitionName="translation_img"
         android:id="@+id/very_image_viewpager"
         android:layout_width="match_parent"
