--- a/app/src/main/res/layout/recommend_welfare_vh_item.xml
+++ b/app/src/main/res/layout/recommend_welfare_vh_item.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:background="@color/black">
+    android:layout_width="match_parent"
+    android:layout_margin="3dp"
+    app:cardCornerRadius="5dp"
+    android:layout_height="200dp">
 
     <ImageView
         android:id="@+id/image"
         android:scaleType="centerCrop"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:transitionName="translation_img" />
-</LinearLayout>
+        android:layout_height="match_parent"/>
+</androidx.cardview.widget.CardView>
