--- a/app/src/main/res/layout/movie_detail_head.xml
+++ b/app/src/main/res/layout/movie_detail_head.xml
@@ -4,22 +4,31 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:backgroundTint="@color/black"
     android:background="@color/gray_e1dada">
+
+    <ImageView
+        android:id="@+id/iv_bg"
+        android:layout_width="match_parent"
+        android:layout_height="250dp"
+        android:scaleType="fitXY"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/iv_posters"
         android:layout_width="100dp"
         android:layout_height="150dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="15dp"
-        android:layout_marginBottom="15dp"
+        android:layout_marginStart="32dp"
         android:scaleType="centerCrop"
         android:src="@mipmap/ic_launcher"
         android:transitionName="movie_detail"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintVertical_bias="0.5" />
 
     <TextView
         android:id="@+id/tv_score"
@@ -28,6 +37,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:text="score"
+        android:textColor="@color/white"
         app:layout_constraintBottom_toTopOf="@+id/tv_director"
         app:layout_constraintStart_toEndOf="@+id/iv_posters"
         app:layout_constraintTop_toTopOf="@id/iv_posters" />
@@ -39,6 +49,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginEnd="16dp"
         android:text=" number of scores"
+        android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="@id/tv_score"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -52,6 +63,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:text="director"
+        android:textColor="@color/white"
         app:layout_constraintBottom_toTopOf="@+id/tv_starring"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -64,6 +76,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:text="starring"
+        android:textColor="@color/white"
         app:layout_constraintBottom_toTopOf="@+id/tv_genres"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -76,6 +89,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:text="genrens"
+        android:textColor="@color/white"
         app:layout_constraintBottom_toTopOf="@+id/tv_date"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -88,6 +102,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:text="date"
+        android:textColor="@color/white"
         app:layout_constraintBottom_toTopOf="@+id/tv_region"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -100,6 +115,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:text="制片国家/地区："
+        android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="@id/iv_posters"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
