--- a/app/src/main/res/layout/play_android_item_article_2.xml
+++ b/app/src/main/res/layout/play_android_item_article_2.xml
@@ -4,9 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginStart="5dp"
-    android:layout_marginEnd="5dp"
-    android:layout_marginBottom="5dp"
+    android:layout_margin="5dp"
     app:cardCornerRadius="5dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -41,8 +39,8 @@
             app:anim_scale_factor="3"
             app:icon_size="20dp"
             app:icon_type="heart"
-            app:layout_constraintBottom_toBottomOf="@+id/tvPublishInfo"
+            app:layout_constraintBottom_toBottomOf="@id/tvPublishInfo"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/tvPublishInfo" />
+            app:layout_constraintTop_toTopOf="@id/tvPublishInfo" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
